--- a/workflows/build.yml
+++ b/workflows/build.yml
@@ -1,1 +1,38 @@
 
+name: Build APK with Buildozer
+
+on:
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install buildozer dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y git zip unzip openjdk-17-jdk python3-setuptools python3-pip python3-virtualenv
+          sudo apt install -y libffi-dev libssl-dev libsqlite3-dev
+
+      - name: Install buildozer
+        run: |
+          pip install --upgrade cython==0.29.33
+          pip install buildozer
+
+      - name: Run Buildozer
+        run: buildozer android debug
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: HlaseniaA-debug.apk
+          path: bin/*.apk
