--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,38 +5,35 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Get Date (for cache key)
-        id: get-date
-        run: echo "date=$(date -u +'%Y%m%d')" >> "$GITHUB_OUTPUT"
+      - name: Install system dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            python3 python3-pip python3-dev build-essential \
+            git zip unzip openjdk-17-jdk \
+            libffi-dev libssl-dev
 
-      - name: Cache Buildozer global directory
-        uses: actions/cache@v4
-        with:
-          path: .buildozer_global
-          key: buildozer-global-${{ hashFiles('buildozer.spec') }}
+      - name: Install Buildozer
+        run: |
+          pip install --upgrade pip
+          pip install buildozer
+          pip install cython==0.29.36
 
-      - name: Cache Buildozer directory
-        uses: actions/cache@v4
-        with:
-          path: .buildozer
-          key: ${{ runner.os }}-${{ steps.get-date.outputs.date }}-${{ hashFiles('buildozer.spec') }}
+      - name: Create .buildozer directory
+        run: mkdir -p ~/.buildozer
 
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
-        with:
-          # najprv doinštaluje Cython + virtualenv, potom spustí buildozer
-          command: pip3 install --user --upgrade Cython==0.29.33 virtualenv; buildozer android debug
-          buildozer_version: stable
+      - name: Run Buildozer debug
+        run: |
+          buildozer android debug
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-apk
-          path: ${{ steps.buildozer.outputs.filename }}
+          name: my-app
+          path: bin/*.apk
