--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,32 +8,33 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Install system dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y \
-            python3 python3-pip python3-dev build-essential \
-            git zip unzip openjdk-17-jdk \
-            libffi-dev libssl-dev
+    - name: Install system dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y \
+          python3 python3-pip python3-dev build-essential \
+          git zip unzip openjdk-17-jdk \
+          libffi-dev libssl-dev
 
-      - name: Install Buildozer
-        run: |
-          pip install --upgrade pip
-          pip install buildozer
-          pip install cython==0.29.36
+    - name: Accept Android SDK Licenses
+      run: |
+        yes | sdkmanager --licenses || true
 
-      - name: Create .buildozer directory
-        run: mkdir -p ~/.buildozer
+    - name: Install Buildozer
+      run: |
+        pip install --upgrade pip
+        pip install buildozer
+        pip install cython==0.29.36
 
-      - name: Run Buildozer debug
-        run: |
-          buildozer android debug
+    - name: Run Buildozer android debug
+      run: |
+        buildozer android debug
 
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: my-app
-          path: bin/*.apk
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: my-app
+        path: bin/*.apk
