--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,29 +11,21 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo apt update
         sudo apt install -y \
           python3 python3-pip python3-dev build-essential \
-          git zip unzip openjdk-17-jdk \
-          libffi-dev libssl-dev
+          git zip unzip openjdk-17-jdk libffi-dev libssl-dev
 
-    - name: Accept Android SDK Licenses
-      run: |
-        yes | sdkmanager --licenses || true
-
-    - name: Install Buildozer
-      run: |
         pip install --upgrade pip
-        pip install buildozer
-        pip install cython==0.29.36
+        pip install buildozer cython==0.29.36
 
-    - name: Run Buildozer android debug
+    - name: Build APK
       run: |
         buildozer android debug
 
-    - name: Upload APK artifact
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: my-app
