--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,20 +8,28 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Install dependencies
+    - name: Install system dependencies
       run: |
         sudo apt update
         sudo apt install -y \
           python3 python3-pip python3-dev build-essential \
-          git zip unzip openjdk-17-jdk libffi-dev libssl-dev
+          git zip unzip openjdk-17-jdk \
+          libffi-dev libssl-dev
 
+    - name: Install Buildozer
+      run: |
         pip install --upgrade pip
         pip install buildozer cython==0.29.36
 
-    - name: Build APK
+    - name: Accept Android Licenses
+      run: |
+        yes | sudo /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+
+    - name: Run Buildozer debug
       run: |
         buildozer android debug
 
