--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,18 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # --- KEY FIX: Java 17 (nutné pre Gradle + Android plugin 8.x) ---
+    # --- KEY FIX: Java 17 + force system switch ---
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
         java-version: '17'
+
+    - name: Force system to use Java 17
+      run: |
+        sudo update-alternatives --set java /usr/lib/jvm/temurin-17-jdk-amd64/bin/java
+        sudo update-alternatives --set javac /usr/lib/jvm/temurin-17-jdk-amd64/bin/javac
+        echo "JAVA_HOME=/usr/lib/jvm/temurin-17-jdk-amd64" >> $GITHUB_ENV
 
     - name: Install system dependencies
       run: |
@@ -27,32 +33,40 @@ jobs:
           git zip unzip openjdk-17-jdk \
           libffi-dev libssl-dev libsqlite3-dev
 
-    # --- Android SDK + NDK SETUP (100% kompatibilné s Buildozerom) ---
-    - name: Install Android SDK + NDK 25b
+    # ---- INSTALL ANDROID SDK ----
+    - name: Download & install Android SDK
       run: |
         sudo mkdir -p /usr/local/lib/android
         cd /usr/local/lib/android
         sudo wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
         sudo unzip commandlinetools-linux-*.zip -d sdk
+
         export ANDROID_HOME=/usr/local/lib/android/sdk
         export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
+        echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
 
-        echo "yes" | sudo $ANDROID_HOME/cmdline-tools/bin/sdkmanager --sdk_root=$ANDROID_HOME --licenses
-        sudo $ANDROID_HOME/cmdline-tools/bin/sdkmanager --sdk_root=$ANDROID_HOME \
+        # Move cmdline-tools to correct folder
+        sudo mkdir -p $ANDROID_HOME/cmdline-tools/latest
+        sudo mv $ANDROID_HOME/cmdline-tools/* $ANDROID_HOME/cmdline-tools/latest || true
+
+        # Accept licenses
+        echo "yes" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+
+        # Install required components
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
           "platform-tools" \
           "platforms;android-33" \
           "build-tools;33.0.2" \
           "ndk;25.1.8937393"
+
+        echo "ANDROIDNDK=$ANDROID_HOME/ndk/25.1.8937393" >> $GITHUB_ENV
 
     - name: Install Buildozer
       run: |
         pip install --upgrade pip
         pip install buildozer cython==0.29.36
 
-    - name: Run Buildozer debug build
-      env:
-        ANDROIDSDK: /usr/local/lib/android/sdk
-        ANDROIDNDK: /usr/local/lib/android/sdk/ndk/25.1.8937393
+    - name: Build APK
       run: |
         buildozer -v android debug
 
