--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,77 +1,83 @@
-name: Build APK with Buildozer
+name: Build APK (KivyMD 2.0.1-dev)
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:           # spustíš ručne z GitHubu
+  push:
+    branches: [ main, master ] # alebo aj pri pushi na main
 
 jobs:
   build:
     runs-on: ubuntu-22.04
+    timeout-minutes: 60
 
     steps:
+      - name: Checkout kódu
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      # Java 17 – povinné pre novší Buildozer + Android Gradle
+      - name: Nastav Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
 
-    # --- KEY FIX: Java 17 + force system switch ---
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      # Systémové závislosti
+      - name: Inštalácia systémových balíčkov
+        run: |
+          sudo apt update -y
+          sudo apt install -y \
+            python3 python3-pip python3-venv \
+            git zip unzip openjdk-17-jdk \
+            autoconf automake cmake libtool pkg-config \
+            libffi-dev libssl-dev libsqlite3-dev \
+            libltdl-dev libglib2.0-dev
 
-    - name: Force system to use Java 17
-      run: |
-        sudo update-alternatives --set java /usr/lib/jvm/temurin-17-jdk-amd64/bin/java
-        sudo update-alternatives --set javac /usr/lib/jvm/temurin-17-jdk-amd64/bin/javac
-        echo "JAVA_HOME=/usr/lib/jvm/temurin-17-jdk-amd64" >> $GITHUB_ENV
+      # Android SDK + NDK 25b (presne tá verzia, ktorú chce KivyMD 2.0+)
+      - name: Inštalácia Android SDK & NDK 25b
+        run: |
+          mkdir -p ~/android
+          cd ~/android
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
+          unzip -q commandlinetools-linux-*.zip
+          mkdir -p cmdline-tools
+          mv cmdline-tools cmdline-tools/latest || mv cmdline-tools/* cmdline-tools/latest/
 
-    - name: Install system dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y \
-          python3 python3-pip python3-dev build-essential \
-          git zip unzip openjdk-17-jdk \
-          libffi-dev libssl-dev libsqlite3-dev
+          export ANDROID_HOME=$HOME/android
+          export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
 
-    # ---- INSTALL ANDROID SDK ----
-    - name: Download & install Android SDK
-      run: |
-        sudo mkdir -p /usr/local/lib/android
-        cd /usr/local/lib/android
-        sudo wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
-        sudo unzip commandlinetools-linux-*.zip -d sdk
+          # Licencie
+          yes | sdkmanager --licenses > /dev/null
 
-        export ANDROID_HOME=/usr/local/lib/android/sdk
-        export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
-        echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+          # Potrebné komponenty
+          sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+          sdkmanager "ndk;25.2.9519653"   # presne 25b (novší build ako 25.1.x)
 
-        # Move cmdline-tools to correct folder
-        sudo mkdir -p $ANDROID_HOME/cmdline-tools/latest
-        sudo mv $ANDROID_HOME/cmdline-tools/* $ANDROID_HOME/cmdline-tools/latest || true
+          echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+          echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/25.2.9519653" >> $GITHUB_ENV
 
-        # Accept licenses
-        echo "yes" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+      # Buildozer + Cython (verzia, ktorá funguje s Kivy 2.3.0)
+      - name: Inštalácia Buildozer a Cython
+        run: |
+          python3 -m pip install --user --upgrade pip
+          python3 -m pip install --user buildozer cython==0.29.37
 
-        # Install required components
-        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
-          "platform-tools" \
-          "platforms;android-33" \
-          "build-tools;33.0.2" \
-          "ndk;25.1.8937393"
+      # Build APK
+      - name: Buildozer android debug
+        run: |
+          ~/.local/bin/buildozer -v android debug
 
-        echo "ANDROIDNDK=$ANDROID_HOME/ndk/25.1.8937393" >> $GITHUB_ENV
+      # Nahraj APK ako artifact
+      - name: Nahraj APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: HlaseniaA-APK
+          path: bin/*.apk
+          retention-days: 30
 
-    - name: Install Buildozer
-      run: |
-        pip install --upgrade pip
-        pip install buildozer cython==0.29.36
-
-    - name: Build APK
-      run: |
-        buildozer -v android debug
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: my-app
-        path: bin/*.apk
+      # Bonus: zobrazenie veľkosti APK
+      - name: Zobraz info o APK
+        run: |
+          ls -lh bin/*.apk
+          echo "Build úspešný! APK je pripravený na stiahnutie vyššie."
