--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,20 @@
-name: Build APK (KivyMD 2.0.1-dev)
+name: Build APK – KivyMD 2.0.1-dev
 
 on:
-  workflow_dispatch:           # spustíš ručne z GitHubu
+  workflow_dispatch:          # ručné spustenie
   push:
-    branches: [ main, master ] # alebo aj pri pushi na main
+    branches: [ main, master ]
 
 jobs:
   build:
     runs-on: ubuntu-22.04
-    timeout-minutes: 60
+    timeout-minutes: 90
 
     steps:
-      - name: Checkout kódu
+      - name: Checkout repozitára
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      # Java 17 – povinné pre novší Buildozer + Android Gradle
+      # Java 17 (povinné pre Gradle v Buildozeri)
       - name: Nastav Java 17
         uses: actions/setup-java@v4
         with:
@@ -31,53 +29,61 @@ jobs:
             python3 python3-pip python3-venv \
             git zip unzip openjdk-17-jdk \
             autoconf automake cmake libtool pkg-config \
-            libffi-dev libssl-dev libsqlite3-dev \
-            libltdl-dev libglib2.0-dev
+            libffi-dev libssl-dev libsqlite3-dev libltdl-dev \
+            libglib2.0-dev libgstreamer1.0-dev
 
-      # Android SDK + NDK 25b (presne tá verzia, ktorú chce KivyMD 2.0+)
+      # Android SDK + NDK 25b – opravené pre novú štruktúru 2025
       - name: Inštalácia Android SDK & NDK 25b
         run: |
-          mkdir -p ~/android
+          mkdir -p ~/android/cmdline-tools
           cd ~/android
+
           wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
           unzip -q commandlinetools-linux-*.zip
-          mkdir -p cmdline-tools
-          mv cmdline-tools cmdline-tools/latest || mv cmdline-tools/* cmdline-tools/latest/
+
+          # Oprava: nový archív už obsahuje priamo cmdline-tools/latest
+          mv cmdline-tools/latest ~/android/cmdline-tools/ || true
+          rm -rf cmdline-tools
 
           export ANDROID_HOME=$HOME/android
           export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
 
           # Licencie
-          yes | sdkmanager --licenses > /dev/null
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1
 
-          # Potrebné komponenty
-          sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
-          sdkmanager "ndk;25.2.9519653"   # presne 25b (novší build ako 25.1.x)
+          # Inštalácia potrebných komponentov
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
+            "platform-tools" \
+            "platforms;android-34" \
+            "build-tools;34.0.0" \
+            "ndk;25.2.9519653"
 
           echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
           echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/25.2.9519653" >> $GITHUB_ENV
 
-      # Buildozer + Cython (verzia, ktorá funguje s Kivy 2.3.0)
+      # Buildozer + správna verzia Cythonu
       - name: Inštalácia Buildozer a Cython
         run: |
           python3 -m pip install --user --upgrade pip
-          python3 -m pip install --user buildozer cython==0.29.37
+          python3 -m pip install --user buildozer
+          python3 -m pip install --user "cython<3"  # 0.29.37 alebo 0.29.36 – obe fungujú
 
       # Build APK
       - name: Buildozer android debug
         run: |
           ~/.local/bin/buildozer -v android debug
 
-      # Nahraj APK ako artifact
-      - name: Nahraj APK
+      # Nahrať APK ako artifact
+      - name: Nahrať APK
         uses: actions/upload-artifact@v4
         with:
           name: HlaseniaA-APK
           path: bin/*.apk
           retention-days: 30
 
-      # Bonus: zobrazenie veľkosti APK
-      - name: Zobraz info o APK
+      # Info o úspechu
+      - name: Info o builde
+        if: success()
         run: |
+          echo "APK úspešne zbuildované!"
           ls -lh bin/*.apk
-          echo "Build úspešný! APK je pripravený na stiahnutie vyššie."
