Refactor GitHub Actions workflow for APK build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build APK – Hlasenia A (KivyMD 2.0.1-dev)
 
 on:
-  workflow_dispatch:          # ručne spustiť
+  workflow_dispatch:
   push:
     branches: [ main, master ]
 
@@ -11,69 +11,50 @@ jobs:
     timeout-minutes: 90
 
     steps:
-      - name: Checkout repozitára
+      - name: Checkout
         uses: actions/checkout@v4
 
-      # Java 17 – povinné
       - name: Nastav Java 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '17'
 
-      # Systémové balíčky – čisté, bez chýb (žiadny gstreamer!)
-      - name: Inštalácia systémových balíčkov
+      - name: Systémové balíčky
         run: |
           sudo apt update -y
           sudo apt install -y \
-            python3 python3-pip python3-venv \
-            git zip unzip openjdk-17-jdk \
+            python3 python3-pip python3-venv git zip unzip openjdk-17-jdk \
             autoconf automake cmake libtool pkg-config \
-            libffi-dev libssl-dev libsqlite3-dev libltdl-dev \
-            libglib2.0-dev
+            libffi-dev libssl-dev libsqlite3-dev libltdl-dev libglib2.0-dev
 
-      # Android SDK + NDK 25b – opravené pre novú štruktúru 2025
       - name: Inštalácia Android SDK & NDK 25b
         run: |
           mkdir -p ~/android/cmdline-tools
           cd ~/android
-
           wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
-          unzip -q commandlinetools-linux-*.zip
-
-          # Oprava nového formátu od mája 2025
-          mv cmdline-tools/latest ~/android/cmdline-tools/ || true
-          rm -rf cmdline-tools
+          unzip -q commandlinetools-linux-*.zip -d cmdline-tools
 
           export ANDROID_HOME=$HOME/android
-          export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
+          export PATH=$PATH:$ANDROID_HOME/cmdline-tools/bin:$ANDROID_HOME/platform-tools
 
-          # Licencie
-          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1
+          yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager --licenses > /dev/null 2>&1 || true
 
-          # Potrebné komponenty
-          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
-            "platform-tools" \
-            "platforms;android-34" \
-            "build-tools;34.0.0" \
-            "ndk;25.2.9519653"
+          $ANDROID_HOME/cmdline-tools/bin/sdkmanager \
+            "platform-tools" "platforms;android-34" "build-tools;34.0.0" "ndk;25.2.9519653"
 
           echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
           echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/25.2.9519653" >> $GITHUB_ENV
 
-      # Buildozer + Cython
-      - name: Inštalácia Buildozer a Cython
+      - name: Inštalácia Buildozer
         run: |
           python3 -m pip install --user --upgrade pip
-          python3 -m pip install --user buildozer
-          python3 -m pip install --user "cython<3"   # 0.29.x
+          python3 -m pip install --user buildozer "cython<3"
 
-      # Build APK
-      - name: Buildozer android debug
+      - name: Build APK
         run: |
           ~/.local/bin/buildozer -v android debug
 
-      # Nahrať APK ako artifact
       - name: Nahrať APK
         uses: actions/upload-artifact@v4
         with:
@@ -81,9 +62,7 @@ jobs:
           path: bin/*.apk
           retention-days: 30
 
-      # Info o úspechu
-      - name: Výsledok buildu
-        if: success()
+      - name: Info
         run: |
-          echo "APK úspešne zbuildované!"
-          ls -lh bin/*.apk || echo "Žiadny APK nebol nájdený (skontroluj log)"
+          echo "Build hotový!"
+          ls -lh bin/*.apk 2>/dev/null || echo "APK ešte nie je (skontroluj log)"
