Refactor Android SDK & NDK setup in build workflow
Updated Android SDK & NDK installation steps and paths.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,36 +24,33 @@ jobs:
         run: |
           sudo apt update -y
           sudo apt install -y \
-            python3 python3-pip python3-venv git zip unzip openjdk-17-jdk \
+            python3 python3-pip python3-venv git zip unzip \
             autoconf automake cmake libtool pkg-config \
             libffi-dev libssl-dev libsqlite3-dev libltdl-dev libglib2.0-dev
 
       - name: Inštalácia Android SDK & NDK 25b
         run: |
-          mkdir -p "$HOME/android/cmdline-tools/latest"
-          cd "$HOME/android"
-
-          # stiahnutie cmdline-tools
+          mkdir -p ~/android
+          cd ~/android
           wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
-          unzip -q commandlinetools-linux-*.zip -d cmdline-tools/latest
+          unzip -q commandlinetools-linux-*.zip
 
-          export ANDROID_HOME="$HOME/android"
-          export PATH="$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools"
+          # Oprava pre aktuálnu štruktúru (december 2025)
+          mkdir -p cmdline-tools
+          mv cmdline-tools/latest cmdline-tools/ 2>/dev/null || true
 
-          # prijatie licencií
-          yes | "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --sdk_root="$ANDROID_HOME" --licenses > /dev/null 2>&1 || true
+          export ANDROID_HOME=$HOME/android
+          export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
 
-          # verzie zodpovedajúce buildozer.spec (api 33, build-tools 33.0.2, NDK 25b)
-          "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --sdk_root="$ANDROID_HOME" \
-            "platform-tools" \
-            "platforms;android-33" \
-            "build-tools;33.0.2" \
-            "ndk;25.1.8937393"
+          # Licencie bez broken pipe
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses < /dev/null || true
+
+          # Inštalácia komponentov
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
+            "platform-tools" "platforms;android-34" "build-tools;34.0.0" "ndk;25.2.9519653"
 
           echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-          echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/25.1.8937393" >> $GITHUB_ENV
-          echo "ANDROIDSDK=$ANDROID_HOME" >> $GITHUB_ENV
-          echo "ANDROIDNDK=$ANDROID_HOME/ndk/25.1.8937393" >> $GITHUB_ENV
+          echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/25.2.9519653" >> $GITHUB_ENV
 
       - name: Inštalácia Buildozer
         run: |
@@ -61,9 +58,6 @@ jobs:
           python3 -m pip install --user buildozer "cython<3"
 
       - name: Build APK
-        env:
-          ANDROIDSDK: ${{ env.ANDROIDSDK }}
-          ANDROIDNDK: ${{ env.ANDROIDNDK }}
         run: |
           ~/.local/bin/buildozer -v android debug
 
@@ -76,5 +70,5 @@ jobs:
 
       - name: Info
         run: |
-          echo "Build hotový!"
-          ls -lh bin/*.apk 2>/dev/null || echo "APK ešte nie je (skontroluj log)"
+          echo "Build úspešný!"
+          ls -lh bin/*.apk 2>/dev/null || echo "APK ešte nie je"
