--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,74 +1,38 @@
-name: Build APK – Hlasenia A (KivyMD 2.0.1-dev)
+# .github/workflows/build.yml
+name: Build APK
 
 on:
-  workflow_dispatch:
   push:
     branches: [ main, master ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-22.04
-    timeout-minutes: 90
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Nastav Java 17
+      - name: Java 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '17'
 
-      - name: Systémové balíčky
+      # Toto je jediný riadok, ktorý potrebuješ namiesto 30 riadkov wget/unzip/mv
+      - name: Android SDK + NDK 25b
+        uses: kivy/buildozer-action/android-sdk@v1
+        with:
+          ndk-version: 25.2.9519653     # presne 25b
+          api-level: 34
+          build-tools: 34.0.0
+
+      - name: Buildozer
         run: |
-          sudo apt update -y
-          sudo apt install -y \
-            python3 python3-pip python3-venv git zip unzip \
-            autoconf automake cmake libtool pkg-config \
-            libffi-dev libssl-dev libsqlite3-dev libltdl-dev libglib2.0-dev
-
-      - name: Inštalácia Android SDK & NDK 25b
-        run: |
-          mkdir -p ~/android
-          cd ~/android
-          wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
-          unzip -q commandlinetools-linux-*.zip
-
-          # Oprava pre aktuálnu štruktúru (december 2025)
-          mkdir -p cmdline-tools
-          mv cmdline-tools/latest cmdline-tools/ 2>/dev/null || true
-
-          export ANDROID_HOME=$HOME/android
-          export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
-
-          # Licencie bez broken pipe
-          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses < /dev/null || true
-
-          # Inštalácia komponentov
-          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
-            "platform-tools" "platforms;android-34" "build-tools;34.0.0" "ndk;25.2.9519653"
-
-          echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-          echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/25.2.9519653" >> $GITHUB_ENV
-
-      - name: Inštalácia Buildozer
-        run: |
-          python3 -m pip install --user --upgrade pip
-          python3 -m pip install --user buildozer "cython<3"
-
-      - name: Build APK
-        run: |
+          pip install --user buildozer "cython<3"
           ~/.local/bin/buildozer -v android debug
 
-      - name: Nahrať APK
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: HlaseniaA-APK
           path: bin/*.apk
-          retention-days: 30
-
-      - name: Info
-        run: |
-          echo "Build úspešný!"
-          ls -lh bin/*.apk 2>/dev/null || echo "APK ešte nie je"
