Update build.yml for improved clarity and fixes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,39 +12,52 @@ jobs:
 
     steps:
 
-      - name: Checkout repozitára
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Nastav Java 17
+      # --------------------------------------------------------
+      # Java 17 (NEVYHNUTNÉ pre Gradle + Android plugin)
+      # --------------------------------------------------------
+      - name: Install Java 17
         uses: actions/setup-java@v4
         with:
-          distribution: temurin
+          distribution: 'temurin'
           java-version: '17'
 
-      - name: Inštalácia systémových balíčkov
+      # --------------------------------------------------------
+      # System packages
+      # --------------------------------------------------------
+      - name: Install system dependencies
         run: |
-          sudo apt update -y
-          sudo apt install -y \
-            python3 python3-pip python3-venv \
-            git zip unzip openjdk-17-jdk \
-            autoconf automake cmake libtool pkg-config \
-            libffi-dev libssl-dev libsqlite3-dev libltdl-dev \
-            libglib2.0-dev
+          sudo apt update
+          sudo apt install -y python3 python3-pip python3-venv \
+              git zip unzip openjdk-17-jdk \
+              autoconf automake cmake libtool pkg-config \
+              libffi-dev libssl-dev libsqlite3-dev libltdl-dev \
+              libglib2.0-dev
 
-      - name: Inštalácia Android SDK & NDK (presná verzia pre Buildozer)
+      # --------------------------------------------------------
+      # Android SDK + NDK (správna verzia commandlinetools!)
+      # --------------------------------------------------------
+      - name: Install Android SDK & NDK 25b
         run: |
           mkdir -p $HOME/android/cmdline-tools
           cd $HOME/android
 
-          wget -q https://dl.google.com/android/repository/commandlinetools-linux-12276707_latest.zip
+          # FUNKČNÝ ZIP (11076708) – správna štruktúra
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
           unzip -q commandlinetools-linux-*.zip -d cmdline-tools
+
+          # Prejmenuj priečinok na expected layout
           mv cmdline-tools/cmdline-tools cmdline-tools/latest
 
           export ANDROID_HOME=$HOME/android
           export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
 
+          # Licencie
           yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME --licenses || true
 
+          # SDK + Build Tools + NDK (podľa buildozer.spec)
           $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME \
             "platform-tools" \
             "platforms;android-33" \
@@ -55,27 +68,30 @@ jobs:
           echo "ANDROIDSDK=$ANDROID_HOME" >> $GITHUB_ENV
           echo "ANDROIDNDK=$ANDROID_HOME/ndk/25.1.8937393" >> $GITHUB_ENV
 
-      - name: Inštalácia Buildozer a Cython
+      # --------------------------------------------------------
+      # Buildozer + Cython
+      # --------------------------------------------------------
+      - name: Install Buildozer
         run: |
           python3 -m pip install --user --upgrade pip
           python3 -m pip install --user buildozer "cython<3"
 
-      - name: Buildozer android debug
+      # --------------------------------------------------------
+      # Build APK
+      # --------------------------------------------------------
+      - name: Build APK with Buildozer
         env:
           ANDROIDSDK: ${{ env.ANDROIDSDK }}
           ANDROIDNDK: ${{ env.ANDROIDNDK }}
         run: |
           ~/.local/bin/buildozer -v android debug
 
-      - name: Nahrať APK
+      # --------------------------------------------------------
+      # Upload APK artifact
+      # --------------------------------------------------------
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: HlaseniaA-APK
           path: bin/*.apk
           retention-days: 30
-
-      - name: Výsledok buildu
-        if: success()
-        run: |
-          echo "APK úspešne zbuildované!"
-          ls -lh bin/*.apk || echo "APK je v Artifacts"
